# uav_nuc

PointCloudFilter/: CMakeLists.txt  package.xml
PointCloudFilter/launch/: filter.launch
PointCloudFilter/src/: pointcloud2_filter.cpp
TOOL_ROS/bluefox2/launch/: single_node.launch
TOOL_ROS/machine_defined/config/: ctrl_param_px3.yaml
TOOL_ROS/machine_defined/launch/: ctrl_md.launch
VINS-Mono/config/euroc/: euroc_config.yaml
calib_image_saver/launch/: single_collect_image.launch
djiros/cmake/: FindmvIMPACT.cmake
djiros/launch/: djifox.launch
duet_exploration/: CMakeLists.txt  package.xml
duet_exploration/include/duet_exploration/: costmap_tools.h  dataType.h  frontier_search.h  harmonic_duet.h  path_search.h  trajectory_generator_lite.h  trajectory_generator_waypoint.h
duet_exploration/launch/: harmonic_sim2.launch  harmonic_ugv_controller.launch  real2_harmonic.launch  stage_duet.launch
duet_exploration/msg/: FrontierCell.msg
duet_exploration/src/: bezier_base.cpp  duet.sublime-project  duet.sublime-workspace  frontier_search.cpp  harmonic_duet.cpp  path_search.cpp  traj_server.cpp  trajectory_generator_lite.cpp  trajectory_generator_waypoint.cpp
frontier_exploration/: .git-credentials  CMakeLists.txt  CodeStructureForGoal.txt  README.md  costmap_plugins.xml  package.xml  untitled.sublime-project  untitled.sublime-workspace
frontier_exploration/include/frontier_exploration/: air_ground_sim_explore_layer.h  astar_costmap.h  costmap_tools.h  frontier_search.h  geometry_tools.h  path_search.h
frontier_exploration/launch/: double_ugv_map.launch  double_ugv_obstacle.launch  navigation_stage_uav_ugv.launch  real_double_only.launch  real_ugv_lab.launch  real_ugv_only.launch  single_ugv.alunch  single_ugv.launch  single_ugv.launch.bak  sup_single_ugv.launch  sup_single_ugv.launch.bak  tf_uav_ugv.launch  tf_ugv.launch  uav_obstacle.launch  uav_ugv_obstacle.launch  uav_ugv_obstacle.launch.bak  uav_ugv_starter.launch
frontier_exploration/msg/: Frontier.msg  FrontierCell.msg  MultiArrayWithHeader.msg
frontier_exploration/notes/: BoundedExplorationLayer.md  Frontier.md  change_log.txt  explore_client_notes.md  explore_server_notes.md  frontier_search_classnotes.md
frontier_exploration/params/: explore_server_params.yaml  move_base_params.yaml  move_base_params1.yaml
frontier_exploration/plugins/: air_ground_sim_explore_layer.cpp  bounded_explore_layer.cpp  path_search.cpp  trajectory_generator_waypoint.cpp
frontier_exploration/sim_stage/exploration_move_base_config/: costmap_common_params.yaml  global_costmap_params.yaml  move_base.xml  slam_gmapping.xml  slam_gmapping_multi.xml
frontier_exploration/sim_stage/launch/: move_base_double_ugv.launch  move_base_exploration.launch  move_base_uav_ugv.launch
frontier_exploration/sim_stage/multi_exploration_move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  slam_gmapping_multi.xml
frontier_exploration/sim_stage/stage_config/worlds/: double_ugv.world  single_exploration.world  uav_ugv_exploration.world  willow-pr2-5cm.world
frontier_exploration/src/: astar_costmap.cpp  explore_client.cpp  explore_server.cpp  explore_starter.cpp  frontier_search.cpp  make_plan_test.cpp  path_search_test.cpp
frontier_exploration/srv/: GetNextAirGroundFrontier.srv
frontier_exploration/stage_config/worlds/: uav_ugv_exploration.world
marker_detector/: CMakeLists.txt
marker_detector/config/: camera.xml
marker_detector/launch/: uav_tf.launch  ugv_tf.launch
marker_detector/src/: marker_detector_node.cpp  odom_to_tf.cpp  uav_tf_publisher.cpp
sim_odom_controller/: CMakeLists.txt  package.xml
sim_odom_controller/launch/: sim_odom_controller.launch
sim_odom_controller/src/: .sim_acc_controller.cpp.swp  sim_acc_controller.cpp  sim_odom_controller.cpp  sim_odom_controller.cpp.bak
simple_map_2d/: CMakeLists.txt  README.md  package.xml
simple_map_2d/include/simple_map_2d/: laser_proc.h  map_inflation.h  simple_map_2d.h  simple_map_2d_ros.h
simple_map_2d/launch/: duet_test.launch  real2_test.launch  stage_duet.launch
simple_map_2d/src/: duet_test.cpp  laser_proc.cpp  map_inflation.cpp  simple_map_2d.cpp  simple_map_2d_ros.cpp
uav_costmap_obstacle_lsyer/: CMakeLists.txt  costmap_plugins.xml  package.xml
uav_costmap_obstacle_lsyer/include/uav_costmap_obstacle_layer/: uav_obstacle_layer.h
uav_costmap_obstacle_lsyer/src/: uav_obstacle_layer.cpp
